# DEADLINE!
5월 17일 까지 제작하여 accuaracy 뽑아내기
May. 5. 2022 (B. InSung)
- Linear 모델 까지 통과, 이제 정상 비트냐 이소성 비트냐만 결과 도출하면 끝

May. 11. 2022 (B. InSung)
- 모델을 재구성하는중.
    - 기존에 모델의 가장 크나큰 문제는 일단 제대로 된 값이 하나도 없었던 거 같으며 라벨 처리를 따로 안함. 현재 문제도 거의 동일하여 라벨 처리를 제대로 못해주고 있긴하다만,
    지금은 조금 다른 문제에서 난관을 겪고 있음.
    - 데이터의 총 길이 값이 1,300,000 개로 이루워져 있어서 output 값을 지정할려면 1, 1300000으로 해줘야하나 메모리 할당에서 오류 발생
    - 멘탈이 나가뒤져가는데 일단 커밋은 해야할거 같다.
- Output size도 맞게 한거 같고 다 맞게 한거 같은데 이상하게 계속 안되고 있음. 원인을 알 수 없는 1로 인해 Output 사이즈가 자꾸 맞춰지지 않음.
    - 아ㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏ
h_bias를 제거함. 근데 다른 문제 생김.
->  0x167276600 <+928>: st1.4s { v0, v1 }, [x10], #32
    0x167276604 <+932>: add    x9, x22, #0x10
    0x167276608 <+936>: st1.4s { v2, v3 }, [x10]
    0x16727660c <+940>: add    x8, x8, #0x40
오버플로우남. 뒤질까
- 나는 멍청하다..
    - 진짜 멍청했다. 왜 backward를 하면 순서가 랜덤해질거라고 생각했지. 크기는 그ㅐㄹ..ㅇㅁ러민ㅇ러ㅏㅇ라어라ㅏㅓㅇ푸ㅠ유ㅜㅠㅜㅠㅜ유ㅜ류ㅜ유ㅜㅜㅠㅠㅜ 
 
may. 10. 2022 (b.insung)
- 아ㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏ
취중코디ㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅇㅇㅇㅇㅇㅇㅇㅇ이ㅣ잉이이ㅣㅣ이이ㅣ이이이이ㅣㅣㅇㅇ
죄송합니다. 정말 진짜......하 이럴거면 술을 왜 마신거지
- 취중 코딩 중에 일단 한 짓 정리는 하자곱곱ㄱ
    - 일단 리스트 그대로 때려박았더니 리스트에서 overflow 발생. 
```
->  0x1798ca0dc <+424>: stp    q1, q0, [x9, #-0x20]
    0x1798ca0e0 <+428>: stp    q3, q2, [x9], #0x40
    0x1798ca0e4 <+432>: add    x22, x22, #0x8
    0x1798ca0e8 <+436>: cmp    x22, x26
Target 0: (python) stopped.
```

May. 9. 2022 (B. InSung)
- 나는 멍청하다... 어찌 라벨링 없이 구분을 할려고 했을까
- 하ㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏ

May. 8. 2022 (B. InSung)
- Sunday Home session start.
- 이전에 짜둔 linear 코드는 SVM 을 거치지 않고 그냥 선형만 거치는 코드였다. 문제를 파악하고 새로운 SVM.py 코드 생성
    - RBM과 마찬가지로 메소드로 끌어와 작성할 예정

May. 6. 2022 (B. InSung)
- Friday Session start.

May. 4. 2022 (B. InSung)
- BBRBM 3개, GBRBM 3개 모두 쌓아서 Train Code 완성. AWS 내에서 테스트 할 예정
- 학습과정 중에 실수가 있었음. 실수로 인한 오류가 많아서 주피터 노트북으로 이전하여 부분적 디버깅으로 진행 예정.
- 현재 테스트 코드 작성 중. BBRBM 3개와 GBRBM을 어떻게 한번에 돌릴지를 궁리해야함. 이는 수업 끝나고 진행 예정.

May. 3. 2022. (B. InSung)
- Tuesday Session Start and want to sleep.
- 일단 새로운 모델로 서버에서 돌려 테스트 결과를 볼 예정.
- 논문에 따르면...