@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "[INFO] Pre-processing for make clean\n",
-      "2022-05-11 22:58:14.902097 model.py code start\n"
+      "2022-05-12 11:25:18.244482 model.py code start\n"
      ]
     }
    ],
@@ -207,30 +207,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    (db1_sig + db2_sig), \n",
-    "    (db1_label + db2_label),\n",
-    "    test_size=0.33,\n",
-    "    shuffle=True\n",
-    ")\n",
+    "# X_train, X_test, y_train, y_test = train_test_split(\n",
+    "#     (db1_sig + db2_sig), \n",
+    "#     (db1_label + db2_label),\n",
+    "#     test_size=0.33,\n",
+    "#     shuffle=True\n",
+    "# )\n",
     "\n",
-    "train_dataloader = DataLoader(X_train,\n",
+    "train_dataloader = DataLoader(db1_sig + db2_sig,\n",
     "                              batch_size=BATCH_SIZE,\n",
-    "                              num_workers=0, collate_fn=lambda x: x,\n",
+    "                              num_workers=0, \n",
+    "                              collate_fn=lambda x: x,\n",
     "                              shuffle=True)\n",
     "\n",
-    "test_dataloader = DataLoader(X_test,\n",
-    "                             batch_size=BATCH_SIZE,\n",
-    "                             shuffle=True)"
+    "# test_dataloader = DataLoader(X_test,\n",
+    "#                              batch_size=BATCH_SIZE,\n",
+    "#                              num_workers=0, \n",
+    "#                              collate_fn=lambda x: x,\n",
+    "#                              shuffle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,40 +256,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/_8/q_cwh5hn0s1dxsrzq2d040p80000gn/T/ipykernel_47925/567705748.py:9: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at  /Users/runner/miniforge3/conda-bld/pytorch-recipe_1643987874214/work/torch/csrc/utils/tensor_new.cpp:201.)\n",
-      "  torch.tensor(data, dtype=torch.float32)\n",
-      "/var/folders/_8/q_cwh5hn0s1dxsrzq2d040p80000gn/T/ipykernel_47925/567705748.py:20: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  data = torch.tensor(data)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Success\n"
+      "torch.Size([10])\n",
+      "torch.Size([10])\n"
      ]
     },
     {
-     "ename": "",
-     "evalue": "",
+     "ename": "RuntimeError",
+     "evalue": "vector + matrix @ vector expected, got 1, 1, 1",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/_8/q_cwh5hn0s1dxsrzq2d040p80000gn/T/ipykernel_52436/132516913.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0mvog_first\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrbm_first\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m         \u001b[0mloss_first\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrbm_first\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfree_energy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvog_first\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mrbm_first\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfree_energy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m         \u001b[0mloss_\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloss_first\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Documents/Github/ecg-dbn/new_RBM.py\u001b[0m in \u001b[0;36mfree_energy\u001b[0;34m(self, v)\u001b[0m\n\u001b[1;32m     65\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mfree_energy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     66\u001b[0m         \u001b[0;34m''' ISSUE PART '''\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 67\u001b[0;31m         \u001b[0mv_bias_term\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mv_bias\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     68\u001b[0m         \u001b[0mwx_b\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinear\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mW\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m         \u001b[0mhidden_term\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwx_b\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: vector + matrix @ vector expected, got 1, 1, 1"
      ]
     }
    ],
@@ -297,17 +287,10 @@
     "for epoch in range(EPOCH):\n",
     "    '''First bbrbm'''\n",
     "    for _, (data) in enumerate(train_dataloader):\n",
-    "        try:\n",
-    "            data = Variable(\n",
+    "        data = Variable(\n",
     "                torch.tensor(data, dtype=torch.float32)\n",
-    "            ).uniform_(0, 1)\n",
-    "            print(\"Success\")\n",
-    "\n",
-    "        except ValueError:\n",
-    "            print(\"Fail\")\n",
-    "            pass\n",
-    "\n",
-    "        data = torch.tensor(data)\n",
+    "        ).uniform_(0, 1)\n",
+    "        \n",
     "        sample_data = torch.bernoulli(data)\n",
     "        sample_data = torch.flatten(sample_data.clone())\n",
     "\n",
@@ -324,6 +307,13 @@
     "    output_from_first.append(v1.tolist())\n",
     "    print(\"1ST BBrbm_first Training loss for {0} epoch {1}\\tEstimate time : {2}\".format(epoch, np.mean(loss_), mt))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
