@@ -1,3 +1,0 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:b7f7a8748efacc48445e9344909d0cfcfa8a0e4f6b0630f0c4ba1211299b2d14
-size 13665
