@@ -3,6 +3,9 @@
 May. 5. 2022 (B. InSung)
 - Linear 모델 까지 통과, 이제 정상 비트냐 이소성 비트냐만 결과 도출하면 끝
 
+May. 12. 2022 (B. InSung)
+- 내가 뭘 했는지는 몰라도 일단 뭐 되긴 된거 같다. 연산 중에 오류로 torch.mv 함수 내에서 벡터와 텐서 연산 오류 외에는 아직 큰 문제는 없음.
+
 May. 11. 2022 (B. InSung)
 - 모델을 재구성하는중.
     - 기존에 모델의 가장 크나큰 문제는 일단 제대로 된 값이 하나도 없었던 거 같으며 라벨 처리를 따로 안함. 현재 문제도 거의 동일하여 라벨 처리를 제대로 못해주고 있긴하다만,
